--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>News Hub</title><link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <title>Simmessons RSS</title><link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 <header>
-    <h1>RSS Aggregator</h1>
+    <h1>Simmessons RSS</h1>
     <form action="{{ url_for('main.search') }}" method="GET">
         <input type="text" name="q" placeholder="Search For Keyword">
         <button type="submit">Search</button>
