--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,8 +5,7 @@
         {% for article in articles %}
             <article>
                 <h2><a href="{{ article[1].link }}">{{ article[1].title }}</a></h2>
-                <p>{{ article[1].published }}</p>
-                <p>Source: {{ article[0] }}</p>
+                <p>{{ article[1].published }} | Source: {{ article[0] }}</p>
             </article>
         {% endfor %}
     </div>
